@startuml
class DataSiswa {
+ {static} List<DataSiswa> database
- {static} int globalID
+ {static} int maximumSemester
- int id
- String nama
- Kelas kelas
- int semester
- int rombel
- String email
- String passHash
- String comment
+ <<Create>> DataSiswa(String,Kelas,int,int,String,char[])
+ <<Create>> DataSiswa(String,Kelas,int,int,String,char[],String)
+ {static} void deleteByUser(String,char[])
+ {static} void updateByUser(String,char[],String,Kelas,int,int,String,String,char[])
+ {static} String digest(String)
- void setId(int)
+ {static} void add(DataSiswa)
+ void setEmail(String)
+ void setKelas(Kelas)
+ void setRombel(int)
+ void setSemester(int)
+ void setNama(String)
+ void setComment(String)
+ String getEmail()
+ int getId()
+ Kelas getKelas()
+ String getNama()
+ int getRombel()
+ int getSemester()
+ String getPassHash()
+ String getComment()
+ void setPassword(String)
+ Map<String,Object> getData()
}
class DataSiswa.EmailAlreadyExistsException {
+ <<Create>> EmailAlreadyExistsException()
+ <<Create>> EmailAlreadyExistsException(String)
+ String getMessage()
}
class DataSiswa.Validator {
+ {static} boolean passIsValid(String)
+ {static} boolean emailIsValid(String)
}
class DataSiswa.Validator.PasswordInvalidException {
+ <<Create>> PasswordInvalidException()
+ <<Create>> PasswordInvalidException(String)
+ String getMessage()
}
class DataSiswa.Validator.EmailInvalidException {
+ <<Create>> EmailInvalidException()
+ <<Create>> EmailInvalidException(String)
+ String getMessage()
}
class DataSiswa.RombelValueInvalidException {
+ <<Create>> RombelValueInvalidException()
+ <<Create>> RombelValueInvalidException(String)
+ String getMessage()
}
class DataSiswa.UserNotFoundException {
+ <<Create>> UserNotFoundException()
+ <<Create>> UserNotFoundException(String)
+ String getMessage()
}
class DataSiswa.SemesterValueInvalidException {
+ <<Create>> SemesterValueInvalidException()
+ <<Create>> SemesterValueInvalidException(String)
+ String getMessage()
}
class DataSiswa.KelasValueInvalidException {
+ <<Create>> KelasValueInvalidException()
+ <<Create>> KelasValueInvalidException(String)
+ String getMessage()
}
class DataSiswa.DataCannotNullException {
+ <<Create>> DataCannotNullException()
+ <<Create>> DataCannotNullException(String)
+ String getMessage()
}


DataSiswa +.. DataSiswa.EmailAlreadyExistsException
Exception <|-- DataSiswa.EmailAlreadyExistsException
DataSiswa +.. DataSiswa.Validator
DataSiswa.Validator +.. DataSiswa.Validator.PasswordInvalidException
Exception <|-- DataSiswa.Validator.PasswordInvalidException
DataSiswa.Validator +.. DataSiswa.Validator.EmailInvalidException
Exception <|-- DataSiswa.Validator.EmailInvalidException
DataSiswa +.. DataSiswa.RombelValueInvalidException
Exception <|-- DataSiswa.RombelValueInvalidException
DataSiswa +.. DataSiswa.UserNotFoundException
Exception <|-- DataSiswa.UserNotFoundException
DataSiswa +.. DataSiswa.SemesterValueInvalidException
Exception <|-- DataSiswa.SemesterValueInvalidException
DataSiswa +.. DataSiswa.KelasValueInvalidException
Exception <|-- DataSiswa.KelasValueInvalidException
DataSiswa +.. DataSiswa.DataCannotNullException
Exception <|-- DataSiswa.DataCannotNullException
@enduml